@@ -1,18 +1,25 @@
 package com.rivalhub.event.billiards;
 
 import com.rivalhub.common.AutoMapper;
+import com.rivalhub.common.exception.*;
 import com.rivalhub.event.EventDto;
-import com.rivalhub.common.exception.EventNotFoundException;
 import com.rivalhub.event.EventService;
 import com.rivalhub.event.EventType;
 import com.rivalhub.event.common.EventCommonService;
+import com.rivalhub.event.pingpong.PingPongEvent;
+import com.rivalhub.organization.Organization;
 import com.rivalhub.organization.OrganizationRepository;
-import com.rivalhub.common.exception.OrganizationNotFoundException;
+import com.rivalhub.reservation.ReservationRepository;
+import com.rivalhub.security.SecurityUtils;
+import com.rivalhub.user.UserData;
 import com.rivalhub.user.UserDetailsDto;
+import com.rivalhub.user.profile.UserMapper;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,6 +31,7 @@ public class BilliardsService implements EventService {
     private final BilliardsEventRepository billiardsEventRepository;
     private final BilliardsEventSaver billiardsEventSaver;
     private final EventCommonService eventCommonService;
+    private final ReservationRepository reservationRepository;
 
 
     @Override
@@ -40,20 +48,31 @@ public class BilliardsService implements EventService {
                 .orElseThrow(OrganizationNotFoundException::new);
         return organization.getBilliardsEvents()
                 .stream()
-                .map(billiardsEvent -> {
-                    EventDto eventDto = autoMapper.mapToEventDto(billiardsEvent);
-                    eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
-                    return eventDto;
-                })
-                .collect(Collectors.toList());
+                .map(mapToEventDTO(organization))
+                .toList();
+    }
+
+    private Function<BilliardsEvent, EventDto> mapToEventDTO(Organization organization) {
+        return billiardsEvent -> {
+            EventDto eventDto = autoMapper.mapToEventDto(billiardsEvent);
+            eventDto.setIsEventPublic(billiardsEvent.isEventPublic());
+            eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
+
+            eventCommonService.setStatusForEvent(billiardsEvent, eventDto);
+            return eventDto;
+        };
     }
 
     @Override
     public EventDto findEvent(long eventId) {
-        return billiardsEventRepository
+        BilliardsEvent event = billiardsEventRepository
                 .findById(eventId)
-                .map(autoMapper::mapToEventDto)
                 .orElseThrow(EventNotFoundException::new);
+
+        EventDto eventDto = autoMapper.mapToEventDto(event);
+        eventDto.setIsEventPublic(event.isEventPublic());
+
+        return eventDto;
     }
 
     @Override
@@ -61,8 +80,38 @@ public class BilliardsService implements EventService {
         return eventCommonService.findAllParticipants(billiardsEventRepository, id);
     }
 
+
+
     @Override
     public boolean matchStrategy(String eventType) {
         return eventType.equalsIgnoreCase(EventType.BILLIARDS.name());
+    }
+
+    @Override
+    public List<UserDetailsDto> deleteUserFromEvent(Long eventId, Long userId) {
+        return eventCommonService.deleteUserFromEvent(billiardsEventRepository,eventId,userId);
+    }
+
+    @Override
+    public List<UserDetailsDto> addUserToEvent(Long eventId, Long userId) {
+        return eventCommonService.addUserToEvent(billiardsEventRepository, eventId, userId);
+    }
+
+    @Override
+    public void joinPublicEvent(Long id) {
+        eventCommonService.joinPublicEvent(billiardsEventRepository, id);
+    }
+
+    @Override
+    @Transactional
+    public void deleteEvent(Long organizationId,Long eventId) {
+        Organization organization = organizationRepository.findById(organizationId).orElseThrow(OrganizationNotFoundException::new);
+        BilliardsEvent eventToDelete = billiardsEventRepository.findById(eventId)
+                .orElseThrow(EventNotFoundException::new);
+
+        organization.getBilliardsEvents().remove(eventToDelete);
+
+        reservationRepository.deleteById(eventToDelete.getReservationId());
+        billiardsEventRepository.deleteById(eventId);
     }
 }
