@@ -5,14 +5,19 @@ import com.rivalhub.event.EventDto;
 import com.rivalhub.common.exception.EventNotFoundException;
 import com.rivalhub.event.EventService;
 import com.rivalhub.event.EventType;
+import com.rivalhub.event.billiards.BilliardsEvent;
 import com.rivalhub.event.common.EventCommonService;
+import com.rivalhub.organization.Organization;
 import com.rivalhub.organization.OrganizationRepository;
 import com.rivalhub.common.exception.OrganizationNotFoundException;
+import com.rivalhub.reservation.ReservationRepository;
 import com.rivalhub.user.UserDetailsDto;
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Service
@@ -24,6 +29,7 @@ public class PullUpEventService implements EventService {
     private final PullUpEventRepository pullUpEventRepository;
     private final PullUpEventSaver pullUpEventSaver;
     private final EventCommonService eventCommonService;
+    private final ReservationRepository reservationRepository;
 
     @Override
     public EventDto addEvent(Long organizationId, EventDto eventDto) {
@@ -41,21 +47,31 @@ public class PullUpEventService implements EventService {
                 .orElseThrow(OrganizationNotFoundException::new);
         return organization.getPullUpsEvents()
                 .stream()
-                .map(pullUpEvent -> {
-                    EventDto eventDto = autoMapper.mapToEventDto(pullUpEvent);
-                    eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
-                    return eventDto;
-                })
-                .collect(Collectors.toList());
+                .map(mapToEventDTO(organization))
+                .toList();
+    }
+
+    private Function<PullUpEvent, EventDto> mapToEventDTO(Organization organization) {
+        return pullUpEvent -> {
+            EventDto eventDto = autoMapper.mapToEventDto(pullUpEvent);
+            eventDto.setIsEventPublic(pullUpEvent.isEventPublic());
+            eventDto.setOrganization(autoMapper.mapToOrganizationDto(organization));
+
+            eventCommonService.setStatusForEvent(pullUpEvent, eventDto);
+            return eventDto;
+        };
     }
 
     @Override
     public EventDto findEvent(long eventId) {
-        return pullUpEventRepository
+        PullUpEvent event = pullUpEventRepository
                 .findById(eventId)
-                .map(autoMapper::mapToEventDto)
                 .orElseThrow(EventNotFoundException::new);
 
+        EventDto eventDto = autoMapper.mapToEventDto(event);
+        eventDto.setIsEventPublic(event.isEventPublic());
+
+        return eventDto;
     }
 
     @Override
@@ -66,5 +82,34 @@ public class PullUpEventService implements EventService {
     public boolean matchStrategy(String eventType) {
         return eventType.equalsIgnoreCase(EventType.PULL_UPS.name());
     }
+
+    @Override
+    public List<UserDetailsDto> deleteUserFromEvent(Long eventId, Long userId) {
+        return eventCommonService.deleteUserFromEvent(pullUpEventRepository,eventId,userId);
+    }
+
+    @Override
+    public List<UserDetailsDto> addUserToEvent(Long eventId, Long userId) {
+        return eventCommonService.addUserToEvent(pullUpEventRepository, eventId, userId);
+    }
+
+    @Override
+    public void joinPublicEvent(Long id) {
+        eventCommonService.joinPublicEvent(pullUpEventRepository, id);
+    }
+
+    @Override
+    @Transactional
+    public void deleteEvent(Long organizationId,Long eventId) {
+        Organization organization = organizationRepository.findById(organizationId).orElseThrow(OrganizationNotFoundException::new);
+
+        PullUpEvent eventToDelete = pullUpEventRepository.findById(eventId)
+                .orElseThrow(EventNotFoundException::new);
+        organization.getPullUpsEvents().remove(eventToDelete);
+
+        reservationRepository.deleteById(eventToDelete.getReservationId());
+        pullUpEventRepository.deleteById(eventId);
+    }
+
 
 }
